src/test/ui/associated-types/impl-trait-return-missing-constraint.stderr
error[E0271]: type mismatch resolving `<impl Bar as Foo>::Item == i32`
  --> $DIR/impl-trait-return-missing-constraint.rs:25:13
   |
LL | fn bar() -> impl Bar {
   |             -------- the expected opaque type
...
LL | fn baz() -> impl Bar<Item = i32> {
   |             ^^^^^^^^^^^^^^^^^^^^ expected associated type, found `i32`
   |
   = note: expected associated type `<impl Bar as Foo>::Item`
                         found type `i32`
   = note: the return type of a function must have a statically known size
help: consider constraining the associated type `<impl Bar as Foo>::Item` to `i32`
   |
LL | fn bar() -> impl Bar<Item = i32> {
   |                     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
